--- a/MyH5Web/css/base.css
+++ b/MyH5Web/css/base.css
@@ -12,3 +12,9 @@ p
     font-family:"Times New Roman";
     font-size:20px;
 }
+
+.base_btn{
+    margin-top:20px;
+    margin-left:40%;
+    margin-right: 40%;
+}
